--- a/TASK7/style.css
+++ b/TASK7/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-    width: 1512px;
+    width: 100%;
     height: 1708px;
     margin: auto;
     padding: 0;
@@ -13,7 +13,6 @@ body {
 }
 
 header {
-    width: 1512px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,11 +29,26 @@ header {
 nav a {
     margin: 0 15px;
     text-decoration: none;
-    color: #333;
+    color: var(--black, #1F1D2A);
+    position: relative;
+    padding: 7px;
 }
-nav a:hover {
-    text-decoration: underline;
+a::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    border-radius: 99px;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #1F1D2A;
+    transition: width ease-in-out 0.5s;
 }
+a:hover::after {
+    width: 100%;
+}
+
 
 .sign-in {
     padding: 10px 20px;
@@ -143,8 +157,8 @@ letter-spacing: 5px;
 .play-btn {
     position: absolute;
     display: inline-block;
-    top: 33%;
-    left: 83%;
+    top: 35%;
+    left: 88%;
 }
 .play-btn img{
 width: 80px;
@@ -248,64 +262,4 @@ line-height: normal;
 text-align: left;
 margin-left: 20px;
 margin-top: 0px;
-}
-@media screen and (max-width: 768px) {
-    body {
-        width: 100%;
-        height: 100%;
-    }
-    header {
-        padding: 20px;
-    }
-    .hero {
-        flex-direction: column;
-        padding: 20px;
-    }
-    .hero-content {
-        text-align: center;
-    }
-    .hero-content h1 {
-        font-size: 32px;
-    }
-    .hero-content p {
-        font-size: 14px;
-    }
-    .hero-image img {
-        width: 300px;
-        height: 300px;
-    }
-    .rating {
-        display: none;
-    }
-    .play-btn {
-        display: none;
-    }
-    .trusted {
-        padding: 10px 0;
-    }
-    .trusted p {
-        font-size: 14px;
-    }
-    .grow h1 {
-        font-size: 24px;
-    }
-    .grow h2 {
-        font-size: 16px;
-    }
-    .cards {
-        flex-direction: column;
-        padding: 10px;
-    }
-    .card {
-        width: 100%;
-    }
-    .card img {
-        height: 200px;
-    }
-    .card h3 {
-        font-size: 16px;
-    }
-    .card p {
-        font-size: 14px;
-    }
 }
