--- a/TASK7/style.css
+++ b/TASK7/style.css
@@ -49,7 +49,6 @@ a:hover::after {
     width: 100%;
 }
 
-
 .sign-in {
     padding: 10px 20px;
     background-color: #f5f5f5;
@@ -180,8 +179,9 @@ flex-shrink: 0;
 }
 
 .trusted .logos img {
-    margin: 0 10px;
-    width: 50px;
+    margin: 20px 0 0 30px;
+    width: 120px;
+    height: 40px;
 }
 
 .grow h1 {
